<resources>
    <string name="app_name">Randomizer</string>
    <string name="description">description</string>
    <string name="toss">toss</string>
    <string name="spin_the_bottle">Spin the bottle</string>
    <string name="lucky_spinner">lucky spinner</string>
    <string name="dice_roll">dice roll</string>
    <string name="let_s_toss">Let\'s Toss</string>
    <string name="roll">Roll</string>
    <string name="number_player">Enter Number of Players Playing</string>
    <string name="generate">generate</string>
    <string name="optional">optional</string>

    <string-array name="players">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
        <item>Eight</item>
    </string-array>

</resources>
