<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiceActvity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/dice_roll"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progress_circular_dice"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="50dp"
            android:indeterminateTint="#000"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/dice_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="70dp"
            android:contentDescription="@string/description"
            android:src="@drawable/dice1" />

        <Button
            android:id="@+id/btn_dice"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/btn_bg"
            android:text="@string/roll"
            android:textColor="#FFF"
            android:textSize="24sp" />

    </LinearLayout>

</ScrollView>